--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+.app-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .app-container {
   display: flex;
   border: 2px solid black;
-  width: 1000px;
-  height: auto;
   padding: 10px 5px;
 }
